// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OperationGenerator > [DELETE] /pet/{petId} with unknownType \`any\` 1`] = `
"import type { DeletePetPetidMutationResponse } from "./DeletePetPetidMutationResponse";

 export type DeletePetPetidMutationResponse = any;
export type DeletePetPetidMutation = {
    Response: DeletePetPetidMutationResponse;
};
"
`;

exports[`OperationGenerator > [DELETE] /pet/{petId} with unknownType \`unknown\` 1`] = `
"import type { DeletePetPetidMutationResponse } from "./DeletePetPetidMutationResponse";

 export type DeletePetPetidMutationResponse = unknown;
export type DeletePetPetidMutation = {
    Response: DeletePetPetidMutationResponse;
};
"
`;

exports[`OperationGenerator > [GET] /pets with optionalType \`questionToken\` 1`] = `
"import { Pets } from "./Pets";
import { Error } from "./Error";
import type { ListPets200 } from "./ListPets200";
import type { ListPetsError } from "./ListPetsError";
import type { ListPetsQueryParams } from "./ListPetsQueryParams";
import type { ListPetsQueryResponse } from "./ListPetsQueryResponse";

 /**
 * @type "object"
*/
export type ListPetsQueryParams = {
    /**
     * @description "How many items to return at one time (max 100)"
     * @type "string" | undefined
    */
    limit?: string;
};

 /**
 * @description A paged array of pets
 */
export type ListPets200 = Pets;

 /**
 * @description unexpected error
 */
export type ListPetsError = Error;

 /**
 * @description A paged array of pets
 */
export type ListPetsQueryResponse = Pets;
export type ListPetsQuery = {
    Response: ListPetsQueryResponse;
    QueryParams: ListPetsQueryParams;
};
"
`;

exports[`OperationGenerator > [GET] /pets with optionalType \`questionToken\` 2`] = `
"import { Pet } from "./Pet";
import { Error } from "./Error";
import type { ShowPetById200 } from "./ShowPetById200";
import type { ShowPetByIdError } from "./ShowPetByIdError";
import type { ShowPetByIdPathParams } from "./ShowPetByIdPathParams";
import type { ShowPetByIdQueryResponse } from "./ShowPetByIdQueryResponse";

 /**
 * @type "object"
*/
export type ShowPetByIdPathParams = {
    /**
     * @description "The id of the pet to retrieve"
     * @type "string" | undefined
    */
    petId?: string;
    /**
     * @description "The id of the pet to retrieve"
     * @type "string" | undefined
    */
    testId?: string;
};

 /**
 * @description Expected response to a valid request
 */
export type ShowPetById200 = Pet;

 /**
 * @description unexpected error
 */
export type ShowPetByIdError = Error;

 /**
 * @description Expected response to a valid request
 */
export type ShowPetByIdQueryResponse = Pet;
export type ShowPetByIdQuery = {
    Response: ShowPetByIdQueryResponse;
    PathParams: ShowPetByIdPathParams;
};
"
`;

exports[`OperationGenerator > [POST] /pets 201 1`] = `
"import { Error } from "./Error";
import { ErrorCode } from "./ErrorCode";
import type { CreatePets201 } from "./CreatePets201";
import type { CreatePetsError } from "./CreatePetsError";
import type { CreatePetsMutationRequest } from "./CreatePetsMutationRequest";
import type { CreatePetsMutationResponse } from "./CreatePetsMutationResponse";

 /**
 * @type "object"
*/
export type CreatePetsMutationRequest = {
    /**
     * @type "string" | undefined
    */
    name?: string;
    /**
     * @type "string" | undefined
    */
    tag?: string;
};

 /**
 * @description unexpected error
 */
export type CreatePetsError = Error;

 /**
 * @description Null response
 */
export type CreatePets201 = (Error & {
    name?: ErrorCode;
});

 /**
 * @description Null response
 */
export type CreatePetsMutationResponse = (Error & {
    name?: ErrorCode;
});
export type CreatePetsMutation = {
    Response: CreatePetsMutationResponse;
    Request: CreatePetsMutationRequest;
};
"
`;
